<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:focusableInTouchMode="true"
    android:id="@+id/registerParentLayout"
    tools:context="com.example.gabrielsilveira.bizu.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/registerToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="start"
            android:src="@drawable/voltar"
            android:contentDescription="@string/up"
            android:id="@+id/registerGoUp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/bizu"
            android:contentDescription="@string/bizu"
            />

    </android.support.v7.widget.Toolbar>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:id="@+id/nameRegister"
        android:drawableStart="@drawable/email"
        android:drawableLeft="@drawable/email"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:drawablePadding="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/name"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        android:background="@drawable/edit_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:id="@+id/emailRegister"
        android:drawableStart="@drawable/email"
        android:drawableLeft="@drawable/email"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:drawablePadding="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        android:background="@drawable/edit_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:id="@+id/dateBirth"
        android:drawableStart="@drawable/email"
        android:drawableLeft="@drawable/email"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:drawablePadding="15dp"
        android:inputType="date"
        android:hint="@string/date"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        android:background="@drawable/edit_text"
        android:focusableInTouchMode="false"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">
        
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/rdBtMale"
            android:text="@string/male"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:checked="true"
            android:button="@drawable/radio_button_white" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/rdBtFemale"
            android:text="@string/female"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:button="@drawable/radio_button_white" />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:id="@+id/passwordRegister"
        android:drawableStart="@drawable/senha"
        android:drawableLeft="@drawable/senha"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:drawablePadding="15dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        android:background="@drawable/edit_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:id="@+id/confirmPasswordRegister"
        android:drawableStart="@drawable/senha"
        android:drawableLeft="@drawable/senha"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:drawablePadding="15dp"
        android:inputType="textPassword"
        android:hint="@string/confirmPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        android:background="@drawable/edit_text"/>

    <com.example.gabrielsilveira.bizu.ToggleableRadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_gravity="center"
        android:id="@+id/rdAcceptTerms"
        android:text="@string/acceptTerms"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:button="@drawable/radio_button_white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:id="@+id/btRegister"
        android:background="@drawable/button_transparent"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="10pt"
        android:textStyle="bold"/>
</LinearLayout>
