<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/infoWindowParentLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/infoWindowCompanyName"
        android:text="@string/placeName"
        android:textSize="11pt"
        android:textColor="@color/actionBarEndColor"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/infoWindowCompanyName"
        android:id="@+id/infoWindowCompanyAddress"
        android:text="@string/placeAddress"
        android:textSize="9pt"/>

    <TextView
        android:layout_width="wrap_content"
        android:maxWidth="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/infoWindowCompanyAddress"
        android:layout_marginTop="15dp"
        android:id="@+id/infoWindowCompanyDescription"
        android:text="@string/description"
        android:textSize="7pt"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/infoWindowCompanyDescription"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/phone"
            android:textSize="8pt"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text=" 98222234"
            android:id="@+id/infoWindowCompanyPhone"
            android:textSize="8pt"/>

    </LinearLayout>


</RelativeLayout>